--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                             src="https://i.scdn.co/image/ab67616d00001e0283141000ee8ce3b893a0b425" alt="">
                         <p class="m-1 rem-m-top name">Finding Peace</p>
                         <p class="m-1 rem-m-top singers color-grey"><span>Kushagra</span>, <span>Bharath</span>,
-                            <br><span>Saaheal</span></p>
+                            <br><span>Saaheal</span>
+                        </p>
                     </div>
                     <div class="card rounded">
                         <div class="play">
@@ -86,8 +87,15 @@
                         </div>
                         <img class="m-1 rem-m-bottom rounded"
                             src="https://i.scdn.co/image/ab67616d00001e0285c5968be0d0d9c545241124" alt="">
-                        <p class="m-1 rem-m-top name">Pal Pal</p>
+                        <p class="m-1 rem-m-top name">Drop</p>
                         <p class="m-1 rem-m-top singers color-grey"><span>Afusic</span>, <span>AliSoomroMusic</span></p>
+                    </div>
+                    <div class="playbar">
+                        <div class="songbuttons">
+                            <img src="previous.svg" alt=""> 
+                            <img src="play.svg" alt=""> 
+                            <img src="next.svg" alt=""> 
+                        </div>
                     </div>
                 </div>
             </div>
